--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,23 @@
-# Firebase Configuration
-VITE_FIREBASE_API_KEY=your_api_key_here
-VITE_FIREBASE_AUTH_DOMAIN=your_project_id.firebaseapp.com
-VITE_FIREBASE_PROJECT_ID=your_project_id
-VITE_FIREBASE_STORAGE_BUCKET=your_project_id.appspot.com
-VITE_FIREBASE_MESSAGING_SENDER_ID=your_sender_id
-VITE_FIREBASE_APP_ID=your_app_id
+# Cloudinary (client-side unsigned preset) - used by the frontend when VITE_ vars are present
+# Create an unsigned upload preset in the Cloudinary dashboard and set the preset name below.
+# For development you can use an unsigned preset, but for production or sensitive files (passports, IDs,
+# CVs with PII) prefer a server-side signed upload flow and keep API_SECRET off the client.
+
+VITE_CLOUDINARY_CLOUD_NAME=dnhjyviwe
+VITE_CLOUDINARY_UPLOAD_PRESET=your_unsigned_preset_name
+
+# Optional (server-side only) - DO NOT commit these to git. Use them only in your backend environment.
+# If you implement a server upload endpoint, set these on the server (not the client).
+# CLOUDINARY_API_KEY=528857853362557
+# CLOUDINARY_API_SECRET=your_api_secret_here
+
+# Example Firebase (already configured elsewhere in this project) - add if you need to override
+# VITE_FIREBASE_API_KEY=your_firebase_api_key
+# VITE_FIREBASE_AUTH_DOMAIN=your_project.firebaseapp.com
+# VITE_FIREBASE_PROJECT_ID=your_project_id
+# VITE_FIREBASE_STORAGE_BUCKET=your_bucket_name
+
+# Instructions:
+# 1. Copy this file to .env (or .env.local) in the project root.
+# 2. Replace the placeholder values with your actual settings (do NOT add API secret to client env).
+# 3. Restart the Vite dev server so the new env vars are loaded.
