--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
+# Filestack API Key - for profile picture uploads
+VITE_FILESTACK_API_KEY=AVcRfQz9YSQuF6JtXlFsQz
+
 # Cloudinary (client-side unsigned preset) - used by the frontend when VITE_ vars are present
 # Create an unsigned upload preset in the Cloudinary dashboard and set the preset name below.
 # For development you can use an unsigned preset, but for production or sensitive files (passports, IDs,
