updated the enviroment

--- a/.env
+++ b/.env
@@ -5,8 +5,13 @@ VITE_FIREBASE_PROJECT_ID=jobfolio-f5b8c
 VITE_FIREBASE_STORAGE_BUCKET=jobfolio-f5b8c.firebasestorage.app
 VITE_FIREBASE_MESSAGING_SENDER_ID=16184324368
 VITE_FIREBASE_APP_ID=1:16184324368:web:c044c228bc7a8ac2bcf595
+
+# Cloudinary Configuration
 VITE_CLOUDINARY_CLOUD_NAME=dnhjyviwe
 VITE_CLOUDINARY_UPLOAD_PRESET=CLOUDINARY_URL=cloudinary://528857853362557:VekROOON-x1CRvrvRnceQ__IJ18@dnhjyviwe
 CLOUDINARY_API_KEY=528857853362557
 CLOUDINARY_API_SECRET=VekROOON-x1CRvrvRnceQ__IJ18
 CLOUDINARY_URL=cloudinary://528857853362557:VekROOON-x1CRvrvRnceQ__IJ18@dnhjyviwe
+
+# Payment - Paystack (NGN Currency)
+VITE_PAYSTACK_KEY=pk_live_YOUR_PAYSTACK_PUBLIC_KEY
